Adicionar put/delete/get by id
